@@ -242,6 +242,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 24244) Updated comments in DefaultSettings.php to reflect Image: --> File:
   namespace rename.
 * Make wfTimestamp recognize negative unix timestamp values.
+* (bug 24401) SimpleSearch: No button/text indicating 'Search' if image is disabled
 
 === API changes in 1.17 ===
 * (bug 22738) Allow filtering by action type on query=logevent.
